alteração padrões antes de subir as entidades do projeto

--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -9,7 +9,7 @@
       }
       <form class="form" role="form" (ngSubmit)="login()" [formGroup]="loginForm">
         <div class="mb-3">
-          <label class="username-label" for="username" jhiTranslate="global.form.username.label">Usuário</label>
+          <label class="username-label" for="username" jhiTranslate="global.form.username.label">E-mail/Usuario</label>
           <input
             type="text"
             class="form-control"
