--- a/src/main/webapp/app/entities/cupom-desconto/list/cupom-desconto.component.html
+++ b/src/main/webapp/app/entities/cupom-desconto/list/cupom-desconto.component.html
@@ -106,7 +106,7 @@
                 @if (cupomDesconto.estabelecimento) {
                   <div>
                     <a [routerLink]="['/estabelecimento', cupomDesconto.estabelecimento.id, 'view']">{{
-                      cupomDesconto.estabelecimento.id
+                      cupomDesconto.estabelecimento.nome
                     }}</a>
                   </div>
                 }
