--- a/src/main/webapp/app/entities/produto/delete/produto-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/produto/delete/produto-delete-dialog.component.html
@@ -9,7 +9,7 @@
     <div class="modal-body">
       <jhi-alert-error></jhi-alert-error>
       <p id="jhi-delete-produto-heading" jhiTranslate="graoDiretoMvpApp.produto.delete.question" [translateValues]="{ id: produto.id }">
-        Tem certeza de que deseja excluir Produto {{ produto.id }}?
+        Tem certeza de que deseja excluir Produto {{ produto.nome }}?
       </p>
     </div>
 
