--- a/src/main/webapp/app/entities/produto/detail/produto-detail.component.html
+++ b/src/main/webapp/app/entities/produto/detail/produto-detail.component.html
@@ -35,7 +35,7 @@
           <dd>
             @if (produto.categoriaProduto) {
               <div>
-                <a [routerLink]="['/categoria-produto', produto.categoriaProduto.id, 'view']">{{ produto.categoriaProduto.id }}</a>
+                <a [routerLink]="['/categoria-produto', produto.categoriaProduto.id, 'view']">{{ produto.categoriaProduto.nome }}</a>
               </div>
             }
           </dd>
@@ -43,7 +43,7 @@
           <dd>
             @if (produto.cardapio) {
               <div>
-                <a [routerLink]="['/cardapio', produto.cardapio.id, 'view']">{{ produto.cardapio.id }}</a>
+                <a [routerLink]="['/cardapio', produto.cardapio.id, 'view']">{{ produto.cardapio.nome }}</a>
               </div>
             }
           </dd>
