--- a/src/main/webapp/app/entities/produto/update/produto-update.component.html
+++ b/src/main/webapp/app/entities/produto/update/produto-update.component.html
@@ -66,7 +66,7 @@
           >
             <option [ngValue]="null"></option>
             @for (categoriaProdutoOption of categoriaProdutosSharedCollection; track $index) {
-              <option [ngValue]="categoriaProdutoOption">{{ categoriaProdutoOption.id }}</option>
+              <option [ngValue]="categoriaProdutoOption">{{ categoriaProdutoOption.nome }}</option>
             }
           </select>
         </div>
@@ -83,7 +83,7 @@
           >
             <option [ngValue]="null"></option>
             @for (cardapioOption of cardapiosSharedCollection; track $index) {
-              <option [ngValue]="cardapioOption">{{ cardapioOption.id }}</option>
+              <option [ngValue]="cardapioOption">{{ cardapioOption.nome }}</option>
             }
           </select>
         </div>
