--- a/src/main/webapp/app/entities/cupom-desconto/detail/cupom-desconto-detail.component.html
+++ b/src/main/webapp/app/entities/cupom-desconto/detail/cupom-desconto-detail.component.html
@@ -17,6 +17,10 @@
           <dd>
             <span>{{ cupomDesconto.id }}</span>
           </dd>
+          <dt><span jhiTranslate="graoDiretoMvpApp.cupomDesconto.nome">Nome</span></dt>
+          <dd>
+            <span>{{ cupomDesconto.nome }}</span>
+          </dd>
           <dt><span jhiTranslate="graoDiretoMvpApp.cupomDesconto.valorDesconto">Valor Desconto</span></dt>
           <dd>
             <span>{{ cupomDesconto.valorDesconto }}</span>
