--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -38,7 +38,7 @@
       @if (!success) {
         <form name="form" role="form" (ngSubmit)="register()" [formGroup]="registerForm">
           <div class="mb-3">
-            <label class="form-label" for="login" jhiTranslate="global.form.username.label">Usuário</label>
+            <label class="form-label" for="login">Usuário</label>
             <input
               type="text"
               class="form-control"
@@ -206,15 +206,6 @@
           </button>
         </form>
       }
-
-      <div class="mt-3 alert alert-warning">
-        <span jhiTranslate="global.messages.info.authenticated.prefix">Se deseja </span>
-        <a class="alert-link" routerLink="/login" jhiTranslate="global.messages.info.authenticated.link">entrar</a
-        ><span jhiTranslate="global.messages.info.authenticated.suffix"
-          >, utilize as seguintes contas padrões:<br />- Administrador (usuário=&quot;admin&quot; and senha=&quot;admin&quot;) <br />-
-          Usuário (usuário=&quot;user&quot; e senha=&quot;user&quot;).</span
-        >
-      </div>
     </div>
   </div>
 </div>
