--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -18,7 +18,7 @@
     </a>
     <div class="navbar-collapse collapse" id="navbarResponsive" [ngbCollapse]="isNavbarCollapsed">
       <ul class="navbar-nav ms-auto">
-        <li>
+        <li *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_USER']">
           <a
             class="nav-link"
             routerLink="/cardapio"
@@ -30,7 +30,7 @@
             <span jhiTranslate="global.menu.entities.cardapio">Cardapio</span>
           </a>
         </li>
-        <li>
+        <li *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_USER']">
           <a
             class="nav-link"
             routerLink="/produto"
@@ -42,7 +42,7 @@
             <span jhiTranslate="global.menu.entities.produto">Produto</span>
           </a>
         </li>
-        <li>
+        <li *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_USER']">
           <a
             class="nav-link"
             routerLink="/categoria-produto"
@@ -54,7 +54,7 @@
             <span jhiTranslate="global.menu.entities.categoriaProduto">Categoria Produto</span>
           </a>
         </li>
-        <li>
+        <li *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_USER']">
           <a
             class="nav-link"
             routerLink="/cupom-desconto"
@@ -66,7 +66,7 @@
             <span jhiTranslate="global.menu.entities.cupomDesconto">Cupom Desconto</span>
           </a>
         </li>
-        <li>
+        <li *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_USER']">
           <a
             class="nav-link"
             routerLink="/estabelecimento"
