--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -1,6 +1,12 @@
-<div>
-  <div class="d-flex justify-content-center">
-    <div class="col-lg-6 col-md-8 col-sm-10">
+<div class="login-tela">
+  <div class="banner-login">
+    <div class="imagem">
+      <div class="col imagemApresentacao"></div>
+    </div>
+  </div>
+  <div class="login">
+    <div class="col imagemlogo" style="background-image: url('/content/images/logo.png')"></div>
+    <div class="formulario">
       <h1 jhiTranslate="login.title" data-cy="loginTitle">Autenticação</h1>
       @if (authenticationError) {
         <div class="alert alert-danger" jhiTranslate="login.messages.error.authentication" data-cy="loginError">
