--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -248,6 +248,16 @@ nav.navbar.navbar-dark.navbar-expand-md.bg-dark {
   background-color: rgb(24, 24, 24) !important;
 }
 
+label {
+  font-weight: 500;
+}
+
+.mb-3 {
+  min-width: 389px;
+}
+
+/* botoes de ativar e desativar */
+
 .btn-toggle.active {
   background-color: var(--bs-primary);
   color: var(--bs-primary-color);
@@ -272,4 +282,96 @@ nav.navbar.navbar-dark.navbar-expand-md.bg-dark {
 .checkbox {
   display: flex;
   align-items: center;
+}
+
+/* tela de login */
+
+.imagemlogo {
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 172px;
+  margin-top: -37px;
+  margin-bottom: -20px;
+}
+
+.imagemApresentacao {
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 39vw;
+  background-image: url(/content/images/banner.jpg);
+}
+
+:root {
+  font-size: 100%;
+  --white: oklch(100% 0 0);
+  --primary-light: oklch(78.81% 0.109 255.212);
+  --primary: oklch(58.63% 0.227 281.34);
+  --primary-dark: oklch(47.56% 0.273 284.25);
+
+  --greyLight-1: oklch(93.77% 0.015 257.2);
+  --greyLight-2: oklch(85.86% 0.033 270.41);
+  --greyDark: oklch(73.91% 0.056 267.7);
+
+  --background: var(--greyLight-1);
+  --onBackground: var(--greyDark);
+
+  --surface: var(--primary);
+  --onSurface: var(--white);
+  --onSurface-Dark: oklch(58.2% 0.228 266.74);
+
+  --shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
+}
+
+.login {
+  background-color: var(--background);
+  padding: 1.25rem 2.5rem;
+  border-radius: 1.5rem;
+  box-shadow: var(--shadow);
+  flex-basis: 35%;
+}
+
+.login a {
+  text-decoration: none;
+  color: var(--onSurface-Dark);
+}
+
+.banner-login {
+  flex-basis: 60%; /* Adjust as needed */
+}
+
+.login-tela {
+  display: flex;
+}
+
+.btn {
+  cursor: pointer;
+  display: inline-block;
+  border-radius: 0.8rem;
+  transition: 300ms ease;
+  font-weight: 500;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.btn:focus {
+  outline: 0;
+}
+
+.btn:hover {
+  color: var(--onSurface);
+}
+
+.btn:active {
+  box-shadow:
+    inset 0.2rem 0.2rem 1rem var(--primary-dark),
+    inset -0.2rem -0.2rem 1rem var(--primary-light);
+  color: var(--onSurface);
+}
+
+.formulario {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
